--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -1,44 +1,44 @@
 { 
   "test": "Hello %s and %s",
-  "close": "Close",
-  "cancel": "Cancel",
-  "continue": "Continue",
-  "send": "Send",
-  "yes": "Yes",
-  "no": "No",
+  "close": "閉じる",
+  "cancel": "キャンセル",
+  "continue": "続ける",
+  "send": "送る",
+  "yes": "はい",
+  "no": "いいえ",
 
-  "welcome": "Welcome to Counterwallet",
-  "get_your_passphrase": "Get Your Passphrase",
-  "quick_access_url": "Quick Access URL",
-  "enter_url_password": "Enter the password to generate encrypted url.",
-  "enter_passphrase": "Enter your 12 word passphrase.",
-  "enter_quick_password": "Enter your quick access password.",
-  "passphrase_created": "We have created a passphrase for you in the box below.<br/>This passphrase lets you access your wallet and the funds it contains.",
-  "write_your_passphrase": "Write your passphrase down and keep it safe.",
-  "if_you_lose_passphrase": "If you lose this passphrase, you will lose access to your wallet <i>forever</i>.",
-  "if_someone_get_passphrase": "If someone gets your passphrase, they gain access to your wallet.",
-  "we_do_not_store_your_passphrase": "We do not store your passphrase and cannot recover it if lost.",
-  "i_have_written_passphrase": "I have <u>written down</u> or otherwise <u>securely stored</u> my passphrase.",
-  "quick_access_intro_1": "To avoid having to type the full 12-word passphrase every time you log into Counterwallet, you can <i>optionally</i> use a special <b>Quick Access URL</b> that is produced by entering a password of your choosing.",
-  "quick_access_intro_2": "If you don't know what this means, just click <b>Skip This Step</b> below.",
-  "enter_quick_access_password": "Enter a Quick Access password:",
+  "welcome": "Counterwallet へようこそ",
+  "get_your_passphrase": "あなたのパスフレーズを取得",
+  "quick_access_url": "クイックアクセス URL",
+  "enter_url_password": "暗号化 URL を生成するためのパスワードを入力してください。",
+  "enter_passphrase": "あなたの 12 語パスフレーズを入力してください",
+  "enter_quick_password": "あなたのクイックアクセスパスワードを入力してください。",
+  "passphrase_created": "あなたのためのパスフレーズを下の欄に生成しました。<br/>このパスフレーズであなたのワレットとそれに含まれる価値記録にアクセスできます。",
+  "write_your_passphrase": "パスフレーズを書き出して安全な場所位に保管してください。",
+  "if_you_lose_passphrase": "このパスワードを忘れると、あなたはこのワレットへのアクセスが<i>永遠に</i>できなくなります。",
+  "if_someone_get_passphrase": "もし誰かがあなたのパスフレーズを取得すると、彼らはあなたのワレットへアクセスできるようになります。",
+  "we_do_not_store_your_passphrase": "我々はあなたのパスフレーズを保存しませんし、失なわれた場合の復元もできません。",
+  "i_have_written_passphrase": "私は私のパスフレーズを<u>書き記した</u>、または<u>安全な場所に保存</u>しました。",
+  "quick_access_intro_1": "Counterwallet へログインするたびに完全な 12語パスフレーズを入力するのを避けるための<i>選択肢として</i>、あなたが入力したパスワードから生成される特別な<b>クイックアクセスURL</b>を用いることができます。",
+  "quick_access_intro_2": "もしあなたがこの意味がわからない場合、下にある <b>このステップをスキップする</b> をクリックしてください。",
+  "enter_quick_access_password": "クイックアクセスパスワードを入力:",
   "copy_down_secret_url": "Copy down the following secret URL and use with your password for quick access:",
   "create_quick_access": "Create a Quick Access URL",
-  "skip_this_step": "Skip This Step",
-  "create_wallet": "Create Wallet",
+  "skip_this_step": "このステップをスキップする",
+  "create_wallet": "ワレットを生成",
   "your_wallet_is_ready": "Your wallet is ready. Use your passphrase or your quick access url to login.",
   "testnet": "Testnet",
   "powered_by_counterparty": "Powered by Counterparty",
-  "create_new_wallet": "Create New Wallet",
+  "create_new_wallet": "新規ワレット生成",
   "new_to_counterwallet": "New to Counterwallet, and want to just play around?",
   "try_testnet": "Try Counterwallet Testnet!",
   "log_into_your_testnet_wallet": "Log Into Your Testnet Wallet",
-  "log_into_your_wallet": "Log Into Your Wallet",
+  "log_into_your_wallet": "あなたのワレットにログイン",
   "dev_mode_enabled": "Dev Mode Enabled",
   "testnet_in_use": "Testnet In Use",
-  "open_wallet": "Open Wallet",
-  "login": "Login",
-  "login_problems": "Problems logging in?",
+  "open_wallet": "ワレットを開く",
+  "login": "ログイン",
+  "login_problems": "ログインで問題がありますか?",
   "counterwallet_desc_1": "Counterwallet is a free web-wallet for Bitcoin and <a href=\"http://www.counterparty.io\" target=\"_blank\">Counterparty</a>, the world’s first protocol for decentralized financial tools.",
   "counterwallet_desc_2": "All transactions made with Counterwallet use an automatic escrow system to keep them secure, with no middleman required.",
   "counterwallet_desc_3": "Secure",
@@ -53,18 +53,18 @@
   "license_agreement": "License Agreement",
   "is_the_first_time": "If you are being asked to accept the Terms and Conditions, this may be the first time you are opening this wallet on this server. <b>If you are trying to access a wallet created before May 8, 2014, you have typed the passphrase incorrectly.</b>",
   "you_must_read": "You must read and accept the following agreement in order to use this site:",
-  "reject_terms": "Reject Terms",
-  "accept_terms": "Accept Terms",
+  "reject_terms": "規約に同意しない",
+  "accept_terms": "規約に同意する",
   "secure_passphrase_entry": "Secure Passphrase Entry",
   "secure_passphrase_desc": "Each text box below corresponds to a word in your 12-word passphrase. To enter your passphrase, click on each box and use the on-screen keyboard that appears, then press the Login button when done. This approach limits the ability that malware and keyloggers have of stealing your passphrase.",
   "word_num": "Word %d",
   "counterwallet": "Counterwallet",
-  "notifications": "Notifications",
-  "last_updated": "Last updated:",
+  "notifications": "通知",
+  "last_updated": "最終更新:",
   "pending_actions": "Pending Actions",
   "required_btc_pays": "Required BTC Pays",
-  "donate": "Donate",
-  "my_balance": "My Balances",
+  "donate": "寄付",
+  "my_balance": "残高",
   "exchange": "Exchange",
   "markets": "Markets",
   "open_orders": "Open Orders",
@@ -75,16 +75,16 @@
   "my_bet_history": "My Bet History",
   "gaming": "Gaming",
   "rock_paper_scissors": "Rock-Paper-Scissors",
-  "history": "History",
+  "history": "履歴",
   "more": "More",
   "my_portofolio": "My Portfolio",
   "top_assets": "Top Assets",
-  "network_stats": "Network Stats",
+  "network_stats": "ネットワーク状態",
   "users_online": "Users Online",
 
   "wallet_options": "Wallet Options",
-  "theme": "Theme",
-  "language": "Language",
+  "theme": "テーマ",
+  "language": "言語",
   "password_field": "Password for Quick Access URL",
   "auto_btcpay": "Auto BTCPay",
   "enable_auto_btcpay": "Enable Automatic BTC Payments",
@@ -98,11 +98,11 @@
   "default_expiration_desc": "Blocks until expiration (This is ~6.75 days at ~9 min per block).",
   "default_expiration_btc": "Default Expiration (BTC Sell)",
   "default_expiration_btc_desc": "Blocks until expiration for selling BTC order.",
-  "reset_state": "Reset State",
-  "reset_widget_state": "Reset Widget State",
+  "reset_state": "状態のリセット",
+  "reset_widget_state": "ウィジェット状態のリセット",
   "reset_state_desc": "Click this button to reset custom color settings, widget positioning, etc.",
-  "show_info": "Show Info",
-  "show_debugging_info": "Show Debugging Info",
+  "show_info": "情報表示",
+  "show_debugging_info": "デバッグ情報の表示",
   "show_info_desc": "Click to show some useful information for troubleshooting wallet issues.",
   "blk_msgid": "Block/MessageID",
   "testnet_isdev": "TestNet/IsDev",
@@ -110,7 +110,7 @@
   "origin_myip_c": "Origin/MyIP/C",
   "failidx": "MultiAPI List (FailIDX)",
   "eng_res": "Eng/Res",
-  "browser_ua": "Browser UA",
+  "browser_ua": "ブラウザ UA",
   "advanced_option": "Advanced Options",
   "enter_password_to_crypt": "Enter the password to encrypt the passphrase.",
   "enter_quantity": "Enter quantity",
@@ -141,7 +141,7 @@
   "for_bugs": "For bugs, you may",
   "open_a_ticket": "open a support ticket",
 
-  "make_a_donation": "Make a donation",
+  "make_a_donation": "寄付をする",
   "donation_desc": "<b>Send a donation to support Counterparty and Counterwallet development.</b><br />Counterparty is non-profit, self-funded, open source and community supported. We appreciate any donations, and all donations go directly towards supporting future development.",
   "send_with": "Send with:",
   "send_amount": "Send Amount:",
