--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -39,7 +39,7 @@
   "open_wallet": "Open Wallet",
   "login": "Login",
   "login_problems": "Problems logging in?",
-  "counterwallet_desc_1": "Counterwallet is a free web-wallet for Bitcoin and <a href=\"http://www.counterparty.io\" target=\"_blank\">Counterparty</a>, the world’s first protocol for decentralized financial tools.",
+  "counterwallet_desc_1": "Counterwallet-mona is a free web-wallet for Monacoin and <a href=\"https://www.monaparty.me\" target=\"_blank\">Monaparty</a>, based on <a href=\"https://counterparty.io\" target=\"_blank\">Counterparty</a> that the world’s first protocol for decentralized financial tools.",
   "counterwallet_desc_2": "All transactions made with Counterwallet use an automatic escrow system to keep them secure, with no middleman required.",
   "counterwallet_desc_3": "Secure",
   "counterwallet_desc_4": "All encryption is handled client-side. Neither your passphrase nor any of your private information ever leaves your browser.",
@@ -49,7 +49,7 @@
   "counterwallet_desc_8": "There are no wallet files to backup or secure, and using your passphrase you can access your wallet from any trusted machine with a web browser.",
   "counterwallet_desc_9": "Open-Source",
   "counterwallet_desc_10": "Counterwallet is entirely open-source, so you know that it works exactly the way that it is supposed to.",
-  "counterwallet_desc_11": "If you like, you can even <a href=\"https://github.com/CounterpartyXCP/counterwallet\" target=\"_blank\">run your own Counterwallet server.</a>",
+  "counterwallet_desc_11": "If you like, you can even <a href=\"https://github.com/monaparty/counterwallet\" target=\"_blank\">run your own Counterwallet server.</a>",
   "license_agreement": "License Agreement",
   "is_the_first_time": "If you are being asked to accept the Terms and Conditions, this may be the first time you are opening this wallet on this server. <b>If you are trying to access a wallet created before May 8, 2014, you have typed the passphrase incorrectly.</b>",
   "you_must_read": "You must read and accept the following agreement in order to use this site:",
