--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -830,13 +830,13 @@
   "fee_option_optimal": "Normal Priority",
   "fee_option_low_priority": "Low Priority (Cheaper)",
   "fee_option_custom": "Custom Fee",
-  "enter_fee_option_custom": "Fee in Satoshi/Byte",
+  "enter_fee_option_custom": "Fee in Watanabe/Byte",
 
   "fee_priority_details_no_wait": "Estimated wait: next block (%s Watanabes/Byte)",
   "fee_priority_details_up_to": "Estimated wait: up to %s blocks (%s Watanabes/Byte)",
   "fee_priority_details_between": "Estimated wait: between %s - %s blocks (%s Watanabes/Byte)",
-  "fee_details": "Transaction fee: %s BTC ($%s USD)",
-  "fee_details_with_btc_out": "Transaction fee: %s BTC ($%s USD, %s fees and %s dust)",
+  "fee_details": "Transaction fee: %s MONA (%s JPY)",
+  "fee_details_with_btc_out": "Transaction fee: %s MONA (%s JPY, %s fees and %s dust)",
   "fee_details_calculating": "Transaction fee: <span class=\"processing\">calculating...</span>",
 
   "memo_type": "Memo Type",
